<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/gray_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#a0000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_grey_100"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:text="@string/share_to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/share_circle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:layout_marginLeft="20dp"
                android:drawableTop="@mipmap/share_circle"
                android:gravity="center"
                android:text="@string/share_to_circle"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/share_wechat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/share_wechat"
                android:gravity="center"
                android:text="@string/share_to_wechat"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>