<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.ForgetPwdActivity">

    <include layout="@layout/toolbar_view" />
    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3399ff"
        >
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/backButtonInFindPassWord">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backbuttonInFindPassWord"
                android:background="@mipmap/bluebuttonintitle"

                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码找回"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <!--灰色细线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_writ"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phoneEditET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="4"
            android:background="@drawable/shape_forget_psw_edit"
            android:hint="@string/login_phone_hint"
            android:maxLength="11"
            android:numeric="integer"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="#d3d3d3" />

        <Button
            android:id="@+id/sendMessageBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/shape_forget_psw_btn"
            android:text="@string/login_yanzheng"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageEditET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/shape_forget_not_psw_edit"
            android:hint="@string/login_yanzheng_hint"
            android:maxLength="6"
            android:numeric="integer"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="#d3d3d3" />

    </LinearLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_begin"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_forget_psw_btn"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>
