<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.hx.jrperson.views.baseView.BaseActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@mipmap/ic_toobar_backg"
            android:visibility="visible"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

            <ImageView
                android:id="@+id/navifation_myIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_navifation_my"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/centerIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_toolbar_center"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/navifation_messageIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/have_no_message"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/toolbar_img_mar_right"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/baseactivity_title_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/toolbar_title"
                android:textSize="@dimen/toobar_title"
                android:text="@string/baseactivity_title" />

            <TextView
                android:id="@+id/baseactivity_share_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbar_title"
                android:textSize="18sp"
                android:text="@string/share"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/toolbar_img_mar_right"
                android:visibility="gone" />

            <TextView
                android:id="@+id/baseactivity_complain_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbar_title"
                android:textSize="18sp"
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                android:text="@string/complain"
                android:visibility="gone"/>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

</LinearLayout>
