<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head_negivityRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/drawerbackground"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/firstPart_RL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:gravity="center"
        android:orientation="vertical">

        <com.hx.jrperson.views.widget.CircleImageView
            android:id="@+id/head_imgIV"
            android:layout_width="@dimen/avatar_radius"
            android:layout_height="@dimen/avatar_radius"
            android:src="@mipmap/headheadpicture" />

        <TextView
            android:id="@+id/nick_nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signatrueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secPart_LL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />

        <LinearLayout
            android:id="@+id/item_personal_order"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/myorder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/my_orders"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />

        <LinearLayout
            android:id="@+id/item_personal_liucheng"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/myprocess" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/service_flow"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />

        <LinearLayout
            android:id="@+id/item_personal_biaozhun"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mystandard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/fix_standard"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />

        <LinearLayout
            android:id="@+id/item_personal_set"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mysetting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/system_settings"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />

        <LinearLayout
            android:id="@+id/item_personal_about_us"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/headpicture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/about_us"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="#4a516b" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdPart_LL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_write_hei"
            android:background="@null" />

        <LinearLayout
            android:id="@+id/item_out_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/quit_account"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>